# hue

./: Makefile  Makefile.vars
apps/beeswax/gen-py/TCLIService/: ttypes.py
apps/filebrowser/src/filebrowser/: views.py
apps/useradmin/src/useradmin/: metrics.py
desktop/core/: requirements.txt
desktop/core/ext-py/MySQL-python-1.2.5/MySQLdb/: cursors.py
desktop/core/ext-py/backports.functools_lru_cache-1.6.4/: PKG-INFO  setup.cfg
desktop/core/ext-py/django-auth-ldap-1.3.0/django_auth_ldap/: backend.py
desktop/core/ext-py/djangosaml2-0.16.11/djangosaml2/: backends.py
desktop/core/ext-py/ranger-client-1.0/: setup.py
desktop/core/ext-py/ranger-client-1.0/ranger_client/: __init__.py
desktop/core/ext-py/ranger-client-1.0/ranger_client/client/: __init__.py  api.py  client.py
desktop/core/ext-py/ranger-client-1.0/ranger_client/job/: __init__.py  job.py
desktop/core/ext-py/ranger_client/: Makefile  Readme.md  __init__.py
desktop/core/ext-py/ranger_client/client/: model.py
desktop/core/ext-py/soupsieve-1.9.6/: PKG-INFO  setup.cfg
desktop/core/ext-py/typing-3.10.0.0/: PKG-INFO
desktop/core/src/desktop/: conf.py  metrics.py  middleware.py  settings.py  urls.py
desktop/core/src/desktop/auth/: backend.py
desktop/core/src/desktop/templates/: assist.mako
desktop/libs/librdbms/src/librdbms/: jdbc.py
desktop/libs/libsaml/src/libsaml/: backend.py
desktop/libs/notebook/src/notebook/connectors/: base.py  jdbc_clickhouse.py  jdbc_mysql.py  sqlalchemyapi_presto.py
(+2 files in other folders)
